# yoyo-rpc

./: CMakeLists.txt  README.md  trick.yoyo
include/: yoyo-rpc.h
src/: entry.c  yoyo-rpc.c
